Fix spacing

--- a/projects/js-packages/publicize-components/src/components/social-post-modal/styles.module.scss
+++ b/projects/js-packages/publicize-components/src/components/social-post-modal/styles.module.scss
@@ -89,8 +89,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 3rem;
-    padding: 2rem;
+    gap: 2rem;
+    padding: 1rem 2rem;
 }
 
 .disabled-tab {
